# gpugraph500

./: .gitignore  LICENSE.TXT  Makefile  README.md  cpubfs_bin.cpp  cscope.out  distmatrix2d.cpp  distmatrix2d.h  g500.pro  globalbfs.cpp  globalbfs.h  index.html  keeneland.sh  known_issues.txt  main.cpp  params.json  parse.sh  simplecpubfs.cpp  simplecpubfs.h
b40c/: LICENSE.TXT  cscope.out
cpu_2d/: CMakeLists.txt  INTEGRATION_README  Makefile  Makefile.am  Makefile.compressor  Makefile.cpu  Makefile.gcc  Makefile.gcc.debug  Makefile.gcc.keeneland  Makefile.in  Makefile.intel  Makefile.keeneland  Makefile.main  aclocal.m4  all.sh  astyle.conf  astyle.sh  autogen.sh  bitlevelfunctions.cpp  bitlevelfunctions.h  bitlevelfunctions.pp.cpp  comp_opt.h  conf5037  config.h.in  configure  configure.ac  configure.lineno  constants.hh  cpubfs_bin.cpp  cpubfs_bin.h  cpubfs_bin.pp.cpp  creek_1geth_4p_sf10_c_gomp_allop_bynode.txt  creek_1geth_4p_sf11_c_nomp_allop.txt  creek_1geth_4p_sf12_c_nomp_allop_bynode.txt  creek_1geth_4p_sf14_c_gomp_allop_bynode.txt  creek_1geth_4p_sf14_c_nomp_allop_bynode.txt  creek_1geth_4p_sf15_c_nomp_allop.txt  creek_1geth_4p_sf16_c_nomp_allop_bynode.txt  creek_1geth_4p_sf17_c_nomp_allop_bynode.txt  creek_1geth_4p_sf5_c_gomp_allop_bynode.txt  (+61 more)
cpu_2d/compression/: compression.hh  compressionfactory.h  compressionfactory.hh  cpusimd.cpp  cpusimd.hh  example  example.cpp  gpusimt.hh  improvedsimd.hh  nocompression.hh  simdplus.hh  types_compression.h
cpu_2d/compression/cpusimd/: codec_list.txt
cpu_2d/compression/cpusimd/include/: VarIntG8IU.h  binarypacking.h  bitpacking.h  bitpackinghelpers.h  boolarray.h  codecfactory.h  codecs.h  common.h  compositecodec.h  delta.h  deltatemplates.h  fastpfor.h  for.h  forcodec.h  frameofreference.h  hybm2.h  integratedbitpacking.h  intersection.h  mersenne.h  simdbinarypacking.h  simdbitpacking.h  simdbitpackinghelpers.h  simdfastpfor.h  simdintegratedbitpacking.h  simdvariablebyte.h  skipping.h  sortedbitpacking.h  streamvariablebyte.h  synthetic.h  timer.h  usimdbitpacking.h  util.h  variablebyte.h  varintgb.h
cpu_2d/compression/cpusimd/src/: benchintersection.cpp  benchsearch.cpp  bitpacking.cpp  for-gen.c  for.c  frameofreference.cpp  integratedbitpacking.cpp  intersection.cpp  simdbitpacking.cpp  simdintegratedbitpacking.cpp  simdpackedsearch.c  simdpackedselect.c  streamvbyte.c  testcodecs.cpp  testintegration.cpp  unit.cpp  usimdbitpacking.cpp  varintdecode.c
cpu_2d/compression/gpusimt/: cm.h  cm_.cu  compress.cu  cudacompress.cu
cpu_2d/compression/improvedsimd/: bitpack.c  bitpack.h  bitpack64_.h  bitpackv.c  bitpackv32_.h  bitunpack.c  bitunpack.h  bitunpack64_.h  bitunpackv.c  bitunpackv32_.h  bitutil.c  bitutil.h  conf.h  icbench.c  makefile  vp4dc.h  vp4dd.c  vp4dd.h
cpu_2d/compression/include/: compositecodec.h  synthetic.h
cpu_2d/compression/simdplus/: vp4dc.c  vp4dc.h  vp4dd.c  vp4dd.h
cpu_2d/cuda/: cuda_bfs.cpp  cuda_bfs.cu  cuda_bfs.h  cuda_support.hh
cpu_2d/generator/: graph_generator.c  graph_generator.h  make_graph.c  make_graph.h  mod_arith_32bit.h  mod_arith_64bit.h  mrg_transitions.c  splittable_mrg.c  splittable_mrg.h  utils.c  utils.h
cpu_2d/logs/: creek_1geth_4p_sf10_c_nomp_allop_bynode.txt  creek_1geth_4p_sf12_c_gomp_allop_bynode.txt  creek_1geth_4p_sf13_c_nomp_allop.txt  creek_1geth_4p_sf13_c_nomp_allop_bynode.txt  creek_1geth_4p_sf15_c_nomp_allop_bynode.txt  creek_1geth_4p_sf16_c_gomp_allop_bynode.txt  creek_1geth_4p_sf17_c_nomp_allop.txt  creek_1geth_4p_sf18_c_gomp_allop_bynode.txt  creek_1geth_4p_sf18_c_nomp_allop_bynode.txt  creek_1geth_4p_sf19_c_nomp_allop_bynode.txt  creek_1geth_4p_sf20_c_gomp_allop_bynode.txt  creek_1geth_4p_sf20_c_nomp_allop_bynode.txt  creek_1geth_4p_sf8_c_nomp_allop_bynode.txt  octane_extoll_4p_sf11_c_gomp_allop.txt  octane_extoll_4p_sf13_nc_gomp_allop.txt  octane_extoll_4p_sf15_c_gomp_allop.txt  octane_extoll_4p_sf15_nc_gomp_allop.txt  octane_extoll_4p_sf17_nc_gomp_allop.txt  octane_extoll_4p_sf21_nc_gomp_allop.txt  octane_extoll_4p_sf23_c_gomp_allop.txt  octane_extoll_4p_sf23_c_nomp_allop.txt  octane_extoll_4p_sf7_nc_gomp_allop.txt  octane_extoll_4p_sf9_c_gomp_allop.txt
cpu_2d/m4/: acx_mpi.m4  ax_cc_maxopt.m4  ax_cc_warnings.m4  ax_check_cl.m4  ax_check_cl.m4.old  ax_check_cuda.m4  ax_check_cuda.m4.old  ax_check_page_aligned_malloc.m4  ax_check_scorep.m4  ax_compile_warnings.m4  ax_cuda.m4  ax_cxx_maxopt.m4  ax_cxx_warnings.m4  ax_ext.m4.old  ax_find_mpi.m4  ax_gcc_func_attibute.m4  ax_gcc_func_attribute.m4  ax_mpi_pre_post.m4  ax_mpicxx_maxopt.m4  ax_openmp.m4  ax_prog_cxx_mpi.m4  cit_cuda.m4  cuda-check.m4  endian.m4  lx_find_mpi.m4  restrict.m4
cpu_2d/validate/: checkqueue.cpp  checkqueue.h  mpi_workarounds.h  onesided.c  onesided.h  onesided_emul.c  validate.cpp  validate.h
eval/: _o16p8n.rsh  _o4p2n.rsh  _o9p8n.rsh  check-all.sh  debugger.sh  filter.scorep  genPic.sh  harmonic-mean-teps-19-20-21-22-23.r  hostfile  hosts-coptimum  hosts-noptimum  hosts-roptimum  keeneland.sh  krun.sh  ktest.sh  new-with-improvements2.r  o16p8n-p.rsh  o16p8n.rsh  o4p2n-p.rsh  o4p2n.rsh  o4p2n_coptim.rsh  o4p2n_noptim.rsh  o4p2n_roptim.rsh  o4p3n-p.rsh  o4p3n.rsh  o4p4n-p.rsh  o4p4n.rsh  o9p8n-p.rsh  o9p8n.rsh  otest.rsh  otest16nodes-profiler.rsh  otest16nodes.rsh  otest1nodes.rsh  otest4nodes-profiler.rsh  otest4nodes.rsh  otest9nodes-profiler.rsh  otest9nodes.rsh  parse.sh  r-scale-teps.sh  run.sh  (+9 more)
generator/: generator.files  generator.includes  graph_generator.h  graph_generator.h~  mod_arith.h  splittable_mrg.c~  utils.c
scripts/: 3rdparty_install.sh  astyle.sh  check-all.sh  debugger.sh  external-apps-installer.sh  openmpi_install.sh  r-compare-fromfile.sh  r-compare.sh  r-detailed-fromfile.sh  r-ify.sh  r-scale-teps.sh  r-scale-times.sh  sample-input.file  scorep_install.sh  stats.sh  tau.sh  tau_clean.sh
scripts/memorytest/: CMakeLists.txt  Makefile.make  app  cmake_install.cmake  memorytest.cpp
stylesheets/: stylesheet.css
test/: b40c_test_util.h
test/bfs/: m  (+9 more)
validate/: mpi_workarounds.h  onesided.h  onesided_emul.c  validate.cpp  validate.h
(+339 files in other folders)
